public abstract class AMedia implements IMedia {
    private String title;
    private String category;
    public void saveToWatchedList() {

    }
    public void saveToSavedList() {

    }
}
