public interface IMedia {
    public void playMedia();
    public void backToMenu(String q);

}
