public class Main {
    public static void main(String[] args) {
    Streaming streaming = new Streaming("Streamning'n'Dreamning");
    streaming.runStreaming();
    }
}