public class Movie extends AMedia {

    @Override
    public void playMedia() {

    }

    @Override
    public void backToMenu(String q) {

    }

}
