import java.util.ArrayList;

public class Streaming {

    private String name;

    private User user;
    private TextUI ui;
    FileIO io;
    Search search;
    String moviePath;
    String seriePath;
    AMedia media;
    ArrayList<Media> watchedList;
    ArrayList<Media> SavedList;

    public Streaming(String name) {
        this.name = name;

        this.ui = ui;
        this.io = io;
    }

    public void runStreaming() {

    }

    public void Menu(){

    }

}