@startuml

class Main {
+ static void main(String[] args)
}

interface IMedia {
+ playMedia()
+ backToMenu(Char q)
'+ pauseMedia()
}

abstract AMedia {
- String title
- String category
+ String saveToWatchedList()
+ String saveToSavedList()
}

class Movie {

}


class Series {
- int episode
- int season
}

class TextUI {
- Scanner scanner
+ String promptText()
+ void displayMessage()
+ int promptNumeric(String msg)
}

class User {
- String username
- String password
User(String username, String password)
'Methods
+ User createUser(String username, String password)
+ boolean confirmPassword(String password)
+ login(String username, String password)
+ boolean checkUsernameAvailability(String username)
+ boolean validatePassword(String password)
}

class Streaming {
- User user
- TextUI ui
- FileIO io
- Search search
- String moviePath
- String seriePath
- AMedia media
- ArrayList<Media> watchedList
- ArrayList<Media> savedList
+ void runStreaming()
+ void Menu()
}



class FileIO {
+ ArrayList<String> readMovieData(String path)
+ ArrayList<String> readSerieData(String path))
+ void saveFavorites(ArrayList<User> user, String path)
+ void saveWatched(ArrayList<User> user, String path)
}

class Search {
- Scanner scanner
+ Amedia media searchByTitle(String title)
+ Amedia media searchByCategory(String category)
}
class Episode{

}

Main <|-- Streaming
Streaming <|-- IMedia
Streaming <|-- User
Streaming <|-- Search
Streaming <|-- TextUI
IMedia <|.. AMedia
Streaming <|-- FileIO
AMedia <|-- Movie
AMedia  <|-- Series
Series *-- Episode
Movie o-- Episode

@enduml